@@ -10,11 +10,10 @@
 
 package icecube.daq.trigger.algorithm;
 
-import icecube.daq.oldpayload.PayloadInterfaceRegistry;
+import icecube.daq.payload.PayloadInterfaceRegistry;
 import icecube.daq.payload.IHitPayload;
 import icecube.daq.payload.IPayload;
 import icecube.daq.payload.IUTCTime;
-import icecube.daq.trigger.config.TriggerParameter;
 import icecube.daq.trigger.control.DummyPayload;
 import icecube.daq.trigger.control.StringMap;
 import icecube.daq.trigger.exceptions.IllegalParameterValueException;
@@ -47,9 +46,11 @@ public class IniceVolumeTrigger extends AbstractTrigger {
      * Log object for this class
      */
 
-    private static final Log log = LogFactory.getLog(IniceVolumeTrigger.class);
+    private static final Log LOG =
+        LogFactory.getLog(IniceVolumeTrigger.class);
 
-    private static int triggerNumber = 0;
+    private static int nextTriggerNumber;
+    private int triggerNumber;
 
     /**
      * Trigger Parameters
@@ -97,9 +98,10 @@ public class IniceVolumeTrigger extends AbstractTrigger {
 
     private StringMap stringMap;
 
-    public IniceVolumeTrigger() {
-        triggerNumber++;
-	stringMap = StringMap.getInstance();
+    public IniceVolumeTrigger()
+    {
+        triggerNumber = ++nextTriggerNumber;
+        stringMap = StringMap.getInstance();
     }
 
     /**
@@ -114,63 +116,67 @@ public class IniceVolumeTrigger extends AbstractTrigger {
      * @return true if it is
      */
 
-    public boolean isConfigured() {
+    public boolean isConfigured()
+    {
         return (configThreshold&&configTimeWindow&&configVolumeHeight&&configCenterShift);
     }
 
     /**
-     * Add a parameter.
+     * Add a trigger parameter.
      *
-     * @param parameter TriggerParameter object.
+     * @param name parameter name
+     * @param value parameter value
      *
-     * @throws icecube.daq.trigger.exceptions.UnknownParameterException
-     * @throws icecube.daq.trigger.exceptions.IllegalParameterValueException
+     * @throws UnknownParameterException if the parameter is unknown
+     * @throws IllegalParameterValueException if the parameter value is bad
      */
-
-    public void addParameter(TriggerParameter parameter) throws UnknownParameterException, IllegalParameterValueException {
-        if (parameter.getName().compareTo("volumeHeight") == 0) {
-           if(Integer.parseInt(parameter.getValue())>=0) {
-               volumeHeight = Integer.parseInt(parameter.getValue());
+    public void addParameter(String name, String value)
+        throws UnknownParameterException, IllegalParameterValueException
+    {
+        if (name.compareTo("volumeHeight") == 0) {
+           if(Integer.parseInt(value)>=0) {
+               volumeHeight = Integer.parseInt(value);
                configVolumeHeight = true;
             } else {
-                throw new IllegalParameterValueException("Illegal number of exlcuded top doms value: " + parameter.getValue());
+                throw new IllegalParameterValueException("Illegal number of exlcuded top doms value: " + value);
             }
         }
-        else if (parameter.getName().compareTo("centerShift")==0) {
-            //if(Integer.parseInt(parameter.getValue())>0) {
-                centerShift = Integer.parseInt(parameter.getValue());
+        else if (name.compareTo("centerShift")==0) {
+            //if(Integer.parseInt(value)>0) {
+                centerShift = Integer.parseInt(value);
                 configCenterShift = true;
 		//} else
-                //throw new IllegalParameterValueException("Illegal max length value:" +parameter.getValue());
+                //throw new IllegalParameterValueException("Illegal max length value:" +value);
         }
-        else if (parameter.getName().compareTo("threshold") == 0) {
-            if(Integer.parseInt(parameter.getValue())>=0) {
-                threshold = Integer.parseInt(parameter.getValue());
+        else if (name.compareTo("threshold") == 0) {
+            if(Integer.parseInt(value)>=0) {
+                threshold = Integer.parseInt(value);
                 configThreshold = true;
             }
             else {
-                throw new IllegalParameterValueException("Illegal Threshold value: " + Integer.parseInt(parameter.getValue()));
+                throw new IllegalParameterValueException("Illegal Threshold value: " + Integer.parseInt(value));
             }
         }
-        else if (parameter.getName().compareTo("timeWindow") == 0) {
-            if(Integer.parseInt(parameter.getValue())>=0) {
-                timeWindow = Integer.parseInt(parameter.getValue());
+        else if (name.compareTo("timeWindow") == 0) {
+            if(Integer.parseInt(value)>=0) {
+                timeWindow = Integer.parseInt(value);
                 configTimeWindow = true;
             }
             else {
-                throw new IllegalParameterValueException("Illegal timeWindow value: " + Integer.parseInt(parameter.getValue()));
+                throw new IllegalParameterValueException("Illegal timeWindow value: " + Integer.parseInt(value));
             }
         }
         else {
-            throw new UnknownParameterException("Unknown parameter: " + parameter.getName());
+            throw new UnknownParameterException("Unknown parameter: " + name);
         }
-        super.addParameter(parameter);
+        super.addParameter(name, value);
     }
 
-    public void setTriggerName(String triggerName) {
+    public void setTriggerName(String triggerName)
+    {
         super.triggerName = triggerName + triggerNumber;
-        if (log.isInfoEnabled()) {
-            log.info("TriggerName set to " + super.triggerName);
+        if (LOG.isInfoEnabled()) {
+            LOG.info("TriggerName set to " + super.triggerName);
         }
     }
 
@@ -190,7 +196,8 @@ public class IniceVolumeTrigger extends AbstractTrigger {
      */
 
     public void runTrigger(IPayload payload)
-        throws TriggerException {
+            throws TriggerException
+        {
 
         // check that this is a hit
         int interfaceType = payload.getPayloadInterfaceType();
@@ -203,8 +210,8 @@ public class IniceVolumeTrigger extends AbstractTrigger {
         // make sure spe bit is on for this hit (must have 0x02)
         int type = AbstractTrigger.getHitType(hit);
         if (type != AbstractTrigger.SPE_HIT) {
-            if (log.isDebugEnabled()) {
-                log.debug("Hit type is " + hit.getTriggerType() + ", returning.");
+            if (LOG.isDebugEnabled()) {
+                LOG.debug("Hit type is " + hit.getTriggerType() + ", returning.");
             }
             return;
         }
@@ -223,9 +230,9 @@ public class IniceVolumeTrigger extends AbstractTrigger {
             // initialize earliest time of interest
             setEarliestPayloadOfInterest(hit);
 
-            if (log.isDebugEnabled()) {
-                log.debug("This is the first hit, initializing...");
-                log.debug("slidingTimeWindowStart set to " + slidingTimeWindow.startTime());
+            if (LOG.isDebugEnabled()) {
+                LOG.debug("This is the first hit, initializing...");
+                LOG.debug("slidingTimeWindowStart set to " + slidingTimeWindow.startTime());
             }
 
         }
@@ -234,8 +241,8 @@ public class IniceVolumeTrigger extends AbstractTrigger {
          */
         else {
 
-            if (log.isDebugEnabled()) {
-                log.debug("Processing hit at time " + hitTimeUTC);
+            if (LOG.isDebugEnabled()) {
+                LOG.debug("Processing hit at time " + hitTimeUTC);
             }
 
             /*
@@ -243,18 +250,18 @@ public class IniceVolumeTrigger extends AbstractTrigger {
              * hitTime < slidingTimeWindowStart
              */
             if (hitTimeUTC == null) {
-                log.error("hitTimeUTC is null!!!");
+                throw new TriggerException("hitTimeUTC was null");
             } else if (slidingTimeWindow.startTime() == null) {
-                log.error("SlidingTimeWindow startTime is null!!!");
+                LOG.error("SlidingTimeWindow startTime is null!!!");
                 for (int i=0; i<slidingTimeWindow.size(); i++) {
                     IHitPayload h = (IHitPayload) slidingTimeWindow.hits.get(i);
                     if (h == null) {
-                        log.error("  Hit " + i + " is null");
+                        LOG.error("  Hit " + i + " is null");
                     } else {
                         if (h.getPayloadTimeUTC() == null) {
-                            log.error("  Hit " + i + " has a null time");
+                            LOG.error("  Hit " + i + " has a null time");
                         } else {
-                            log.error("  Hit " + i + " has time = " + h.getPayloadTimeUTC());
+                            LOG.error("  Hit " + i + " has time = " + h.getPayloadTimeUTC());
                         }
                     }
                 }
@@ -277,8 +284,8 @@ public class IniceVolumeTrigger extends AbstractTrigger {
                     addHitToTriggerWindow(hit);
                 }
 
-                if (log.isDebugEnabled()) {
-                    log.debug("Hit falls within slidingTimeWindow numberOfHitsInSlidingTimeWindow now equals "
+                if (LOG.isDebugEnabled()) {
+                    LOG.debug("Hit falls within slidingTimeWindow numberOfHitsInSlidingTimeWindow now equals "
                               + slidingTimeWindow.size());
                 }
 
@@ -289,8 +296,8 @@ public class IniceVolumeTrigger extends AbstractTrigger {
              */
             else {
 
-                if (log.isDebugEnabled()) {
-                    log.debug("Hit falls outside slidingTimeWindow, numberOfHitsInSlidingTimeWindow is "
+                if (LOG.isDebugEnabled()) {
+                    LOG.debug("Hit falls outside slidingTimeWindow, numberOfHitsInSlidingTimeWindow is "
                               + slidingTimeWindow.size());
                 }
 
@@ -300,8 +307,8 @@ public class IniceVolumeTrigger extends AbstractTrigger {
                     // onTrigger?
                     if (onTrigger) {
 
-                        if (log.isDebugEnabled()) {
-                            log.debug("Trigger is already on. Changing triggerWindowStop to "
+                        if (LOG.isDebugEnabled()) {
+                            LOG.debug("Trigger is already on. Changing triggerWindowStop to "
                                       + getTriggerWindowStop());
                         }
 
@@ -311,8 +318,8 @@ public class IniceVolumeTrigger extends AbstractTrigger {
                         hitsWithinTriggerWindow.addAll(slidingTimeWindow.copy());
                         numberOfHitsInTriggerWindow = hitsWithinTriggerWindow.size();
 
-                        if (log.isDebugEnabled()) {
-                            log.debug("Trigger is now on, numberOfHitsInTriggerWindow = "
+                        if (LOG.isDebugEnabled()) {
+                            LOG.debug("Trigger is now on, numberOfHitsInTriggerWindow = "
                                       + numberOfHitsInTriggerWindow + " triggerWindowStart = "
                                       + getTriggerWindowStart() + " triggerWindowStop = "
                                       + getTriggerWindowStop());
@@ -325,8 +332,8 @@ public class IniceVolumeTrigger extends AbstractTrigger {
 
                 }
 
-                if (log.isDebugEnabled()) {
-                    log.debug("Now slide the window...");
+                if (LOG.isDebugEnabled()) {
+                    LOG.debug("Now slide the window...");
                 }
 
                 // Now advance the slidingTimeWindow until the hit is inside or there is only 1 hit left in window
@@ -337,20 +344,20 @@ public class IniceVolumeTrigger extends AbstractTrigger {
 
                     // if this hit is not part of the trigger, update the earliest time of interest
                     if ( (hitsWithinTriggerWindow == null) ||
-                         ((hitsWithinTriggerWindow != null) && (!hitsWithinTriggerWindow.contains(oldHit))) ) {
+                         (!hitsWithinTriggerWindow.contains(oldHit))) {
                         IPayload oldHitPlus = new DummyPayload(oldHit.getHitTimeUTC().getOffsetUTCTime(0.1));
                         setEarliestPayloadOfInterest(oldHitPlus);
                     }
 
-                    if (log.isDebugEnabled()) {
-                        log.debug("numberOfHitsInSlidingTimeWindow is now " + slidingTimeWindow.size()
+                    if (LOG.isDebugEnabled()) {
+                        LOG.debug("numberOfHitsInSlidingTimeWindow is now " + slidingTimeWindow.size()
                                   + " slidingTimeWindowStart is now " + slidingTimeWindow.startTime());
                     }
 
                 }
 
-                if (log.isDebugEnabled()) {
-                    log.debug("Done sliding");
+                if (LOG.isDebugEnabled()) {
+                    LOG.debug("Done sliding");
                 }
 
                 /*
@@ -369,8 +376,8 @@ public class IniceVolumeTrigger extends AbstractTrigger {
 
                     slidingTimeWindow.add(hit);
 
-                    if (log.isDebugEnabled()) {
-                        log.debug("Hit still outside slidingTimeWindow, start a new one "
+                    if (LOG.isDebugEnabled()) {
+                        LOG.debug("Hit still outside slidingTimeWindow, start a new one "
                                   + "numberOfHitsInSlidingTimeWindow = " + slidingTimeWindow.size()
                                   + " slidingTimeWindowStart = " + slidingTimeWindow.startTime());
                     }
@@ -380,8 +387,8 @@ public class IniceVolumeTrigger extends AbstractTrigger {
                 else {
                     slidingTimeWindow.add(hit);
 
-                    if (log.isDebugEnabled()) {
-                        log.debug("Hit is now in slidingTimeWindow numberOfHitsInSlidingTimeWindow = "
+                    if (LOG.isDebugEnabled()) {
+                        LOG.debug("Hit is now in slidingTimeWindow numberOfHitsInSlidingTimeWindow = "
                                   + slidingTimeWindow.size());
                     }
 
@@ -392,8 +399,8 @@ public class IniceVolumeTrigger extends AbstractTrigger {
                  */
                 if (onTrigger) {
 
-                    if (log.isDebugEnabled()) {
-                        log.debug("Trigger is on, numberOfHitsInSlidingTimeWindow = "
+                    if (LOG.isDebugEnabled()) {
+                        LOG.debug("Trigger is on, numberOfHitsInSlidingTimeWindow = "
                                   + slidingTimeWindow.size());
                     }
 
@@ -401,15 +408,15 @@ public class IniceVolumeTrigger extends AbstractTrigger {
                            (!slidingTimeWindow.overlaps(hitsWithinTriggerWindow)) ) ||
                          ( (slidingTimeWindow.size() == 1) && (threshold == 1) ) ) {
 
-                        if (log.isDebugEnabled()) {
-                            log.debug("Pass trigger to analyzeTopology and reset");
+                        if (LOG.isDebugEnabled()) {
+                            LOG.debug("Pass trigger to analyzeTopology and reset");
                         }
 
                         // pass trigger and reset
                         for (int i=0; i<hitsWithinTriggerWindow.size(); i++) {
                             IHitPayload h = (IHitPayload) hitsWithinTriggerWindow.get(i);
                             if (slidingTimeWindow.contains(h)) {
-                                log.error("Hit at time " + h.getPayloadTimeUTC()
+                                LOG.error("Hit at time " + h.getPayloadTimeUTC()
                                           + " is part of new trigger but is still in SlidingTimeWindow");
                             }
                         }
@@ -422,8 +429,8 @@ public class IniceVolumeTrigger extends AbstractTrigger {
                     } else {
                         addHitToTriggerWindow(hit);
 
-                        if (log.isDebugEnabled()) {
-                            log.debug("Still on trigger, numberOfHitsInTriggerWindow = "
+                        if (LOG.isDebugEnabled()) {
+                            LOG.debug("Still on trigger, numberOfHitsInTriggerWindow = "
                                       + numberOfHitsInTriggerWindow);
                         }
 
@@ -445,10 +452,11 @@ public class IniceVolumeTrigger extends AbstractTrigger {
      * @param hitsWithinTriggerWindow
      */
 
-    public void analyzeHits(LinkedList hitsWithinTriggerWindow) {
+    public void analyzeHits(LinkedList hitsWithinTriggerWindow)
+    {
 
-        if(log.isDebugEnabled()) {
-            log.debug("Counting hits which meet volume trigger criteria");
+        if(LOG.isDebugEnabled()) {
+            LOG.debug("Counting hits which meet volume trigger criteria");
         }
 
 	// loop over all hits and use each as the center of a volume element
@@ -458,7 +466,7 @@ public class IniceVolumeTrigger extends AbstractTrigger {
 	    int numberOfHits = 1;
 
 	    // get neighboring doms
-	    String centerId = center.getDOMID().toString();
+	    long centerId = center.getDOMID().longValue();
 	    ArrayList<String> neighbors = getNeighboringDoms(centerId);
 
 	    // loop over all other hits and check to see if they are in the volume element
@@ -481,7 +489,8 @@ public class IniceVolumeTrigger extends AbstractTrigger {
 	}
     }
 
-    private ArrayList<String> getNeighboringDoms(String centerDom) {
+    private ArrayList<String> getNeighboringDoms(long centerDom)
+    {
 	ArrayList<String> neighbors = new ArrayList<String>();
 
 	// get the string and position of the center dom
@@ -489,7 +498,7 @@ public class IniceVolumeTrigger extends AbstractTrigger {
 	int centerPosition = getTriggerHandler().getDOMRegistry().getStringMinor(centerDom);
 
 	// get the vertical shift of the center string
-	int vShift = stringMap.getVerticalOffset(new Integer(centerString));
+	int vShift = stringMap.getVerticalOffset(centerString);
 
 	// calculate the range of DOM positions in this volume element
 	int minPos = centerPosition - volumeHeight;
@@ -509,11 +518,11 @@ public class IniceVolumeTrigger extends AbstractTrigger {
 	}
 
 	// get list of neighboring strings
-	ArrayList<Integer> neighborStrings = stringMap.getNeighbors(new Integer(centerString));
+	ArrayList<Integer> neighborStrings = stringMap.getNeighbors(Integer.valueOf(centerString));
 	for (Integer string : neighborStrings) {
 
 	    // calculate the range for this string
-	    int thisShift = stringMap.getVerticalOffset(new Integer(string));
+	    int thisShift = stringMap.getVerticalOffset(string);
 	    int omShift = thisShift - vShift;
 
 	    minPos += omShift;
@@ -541,11 +550,12 @@ public class IniceVolumeTrigger extends AbstractTrigger {
      * and no further calls to runTrigger.
      */
 
-    public void flush() {
+    public void flush()
+    {
         // see if we're above threshold, if so form a trigger
         if (onTrigger) {
-            if (log.isDebugEnabled()) {
-                log.debug("Last Trigger is on, numberOfHitsInTriggerWindow = "
+            if (LOG.isDebugEnabled()) {
+                LOG.debug("Last Trigger is on, numberOfHitsInTriggerWindow = "
                           + numberOfHitsInTriggerWindow);
             }
 
@@ -558,8 +568,8 @@ public class IniceVolumeTrigger extends AbstractTrigger {
             hitsWithinTriggerWindow.addAll(slidingTimeWindow.copy());
             numberOfHitsInTriggerWindow = hitsWithinTriggerWindow.size();
 
-            if (log.isDebugEnabled()) {
-                log.debug(" Last Trigger is now on, numberOfHitsInTriggerWindow = "
+            if (LOG.isDebugEnabled()) {
+                LOG.debug(" Last Trigger is now on, numberOfHitsInTriggerWindow = "
                 + numberOfHitsInTriggerWindow + " triggerWindowStart = "
                 + getTriggerWindowStart() + " triggerWindowStop = "
                 + getTriggerWindowStop());
@@ -574,19 +584,23 @@ public class IniceVolumeTrigger extends AbstractTrigger {
      *Get Parameter Methods
      */
 
-    public int getThreshold() {
+    public int getThreshold()
+    {
         return threshold;
     }
 
-    public int getTimeWindow() {
+    public int getTimeWindow()
+    {
         return timeWindow;
     }
 
-    public int getVolumeHeight() {
+    public int getVolumeHeight()
+    {
         return volumeHeight;
     }
 
-    public int getCenterShift() {
+    public int getCenterShift()
+    {
         return centerShift;
     }
 
@@ -595,7 +609,8 @@ public class IniceVolumeTrigger extends AbstractTrigger {
      * @return start of trigger window
      */
 
-    private IUTCTime getTriggerWindowStart() {
+    private IUTCTime getTriggerWindowStart()
+    {
         return ((IHitPayload) hitsWithinTriggerWindow.getFirst()).getHitTimeUTC();
     }
 
@@ -604,15 +619,18 @@ public class IniceVolumeTrigger extends AbstractTrigger {
      * @return stop of trigger window
      */
 
-    private IUTCTime getTriggerWindowStop() {
+    private IUTCTime getTriggerWindowStop()
+    {
         return ((IHitPayload) hitsWithinTriggerWindow.getLast()).getHitTimeUTC();
     }
 
-    public int getNumberOfHitsWithinSlidingTimeWindow() {
+    public int getNumberOfHitsWithinSlidingTimeWindow()
+    {
         return slidingTimeWindow.size();
     }
 
-    public int getNumberOfHitsWithinTriggerWindow() {
+    public int getNumberOfHitsWithinTriggerWindow()
+    {
         return hitsWithinTriggerWindow.size();
     }
 
@@ -620,19 +638,23 @@ public class IniceVolumeTrigger extends AbstractTrigger {
      *Set Parameter Methods
      */
 
-    public void setThreshold(int Threshold) {
+    public void setThreshold(int Threshold)
+    {
         this.threshold = Threshold;
     }
 
-    public void setTimeWindow(int timeWindow) {
+    public void setTimeWindow(int timeWindow)
+    {
         this.timeWindow = timeWindow;
     }
 
-    public void setVolumeHeight(int volumeHeight) {
+    public void setVolumeHeight(int volumeHeight)
+    {
         this.volumeHeight = volumeHeight;
     }
 
-    public void setCenterShift(int centerShift) {
+    public void setCenterShift(int centerShift)
+    {
         this.centerShift = centerShift;
     }
 
@@ -641,79 +663,85 @@ public class IniceVolumeTrigger extends AbstractTrigger {
      * @param triggerPrimitive hit to add
      */
 
-    private void addHitToTriggerWindow(IHitPayload triggerPrimitive) {
+    private void addHitToTriggerWindow(IHitPayload triggerPrimitive)
+    {
         hitsWithinTriggerWindow.addLast(triggerPrimitive);
         numberOfHitsInTriggerWindow = hitsWithinTriggerWindow.size();
     }
 
-    private void reset() {
-
-        /**
-         *Reseting SimpleMajorityTrigger parameters
-         */
-
+    /**
+     * Reset SimpleMajorityTrigger parameters
+     */
+    private void reset()
+    {
         slidingTimeWindow = new SlidingTimeWindow();
-        threshold = 0;
-        timeWindow = 0;
         numberOfHitsProcessed = 0;
         hitsWithinTriggerWindow.clear();
         numberOfHitsInTriggerWindow = 0;
-        configThreshold = false;
-        configTimeWindow = false;
+    }
 
-        /**
-         * Resetting VolumeTrigger parameters
-         */
+    /**
+     * Reset the algorithm to its initial condition.
+     */
+    public void resetAlgorithm()
+    {
+        reset();
 
-        volumeHeight = 0;
-        centerShift = 0;
-        configVolumeHeight = false;
-        configCenterShift = false;
-
+        super.resetAlgorithm();
     }
 
     private final class SlidingTimeWindow {
 
         private LinkedList hits;
 
-        private SlidingTimeWindow() {
+        private SlidingTimeWindow()
+        {
             hits = new LinkedList();
         }
 
-        private void add(IHitPayload hit) {
+        private void add(IHitPayload hit)
+        {
             hits.addLast(hit);
         }
 
-        private int size() {
+        private int size()
+        {
             return hits.size();
         }
 
-        private IHitPayload slide() {
+        private IHitPayload slide()
+        {
             return (IHitPayload) hits.removeFirst();
         }
 
-        private IUTCTime startTime() {
+        private IUTCTime startTime()
+        {
             return ((IHitPayload) hits.getFirst()).getHitTimeUTC();
         }
 
-        private IUTCTime endTime() {
+        private IUTCTime endTime()
+        {
             return (startTime().getOffsetUTCTime((double) timeWindow));
         }
 
-        private boolean inTimeWindow(IUTCTime hitTime) {
+        private boolean inTimeWindow(IUTCTime hitTime)
+        {
             return (hitTime.compareTo(startTime()) >= 0) &&
                    (hitTime.compareTo(endTime()) <= 0);
         }
 
-        private LinkedList copy() {
+        private LinkedList copy()
+        {
             return (LinkedList) hits.clone();
         }
 
-        private boolean contains(Object object) {
+        private boolean contains(Object object)
+        {
             return hits.contains(object);
         }
 
-        private boolean overlaps(List list) {
+        private boolean overlaps(List list)
+        {
             Iterator iter = list.iterator();
             while (iter.hasNext()) {
                 if (contains(iter.next())) {
@@ -723,9 +751,30 @@ public class IniceVolumeTrigger extends AbstractTrigger {
             return false;
         }
 
-        private boolean aboveThreshold() {
+        private boolean aboveThreshold()
+        {
             return (hits.size() >= threshold);
         }
     }
 
+    /**
+     * Get the monitoring name.
+     *
+     * @return the name used for monitoring this trigger
+     */
+    public String getMonitoringName()
+    {
+        return "II_VOLUME";
+    }
+
+    /**
+     * Does this algorithm include all relevant hits in each request
+     * so that it can be used to calculate multiplicity?
+     *
+     * @return <tt>true</tt> if this algorithm can supply a valid multiplicity
+     */
+    public boolean hasValidMultiplicity()
+    {
+        return true;
+    }
 }
